Gulfam: Style.css for price alignment issue.

--- a/css/index_style_new_1.css
+++ b/css/index_style_new_1.css
@@ -240,7 +240,7 @@ body {
     font-size:11px;
     padding:8px 0px 10px 5px;
     float:left;
-    width:170px;
+    width:161px;
 }
 .flip #minus_sign {
     float:right;
